笔记细节更新